--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Bryantellius/es6_modules#readme",
   "devDependencies": {
-    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "webpack": "^5.89.0"
   }
 }
